# Text-to-SQL-MLOps

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  PLAN.md  README.md  SmartSearch.code-workspace  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml
airflow/: docker-compose.yml  requirements.txt
airflow/dags/: active_learning_dag.py  monitoring_dag.py
airflow/plugins/operators/: dataset_formatter.py  evidently_report.py  s3_failed_sql_collector.py
app/: Dockerfile  Makefile  docker-compose.yml  load_test_results.json  pyproject.toml
app/scripts/: aws_load_test.py  fake_sagemaker.py  load_test.py
app/src/: dynamo.py  executor.py  handler.py  inference.py  kinesis.py  metrics.py  prompts.py  schemas.py  storage.py
app/tests/: test_dynamo.py  test_executor.py  test_handler.py  test_inference.py
app/tests/integration/: conftest.py  test_dynamo_integration.py  test_handler_integration.py  test_inference_integration.py  test_storage_integration.py
infra/: Makefile  main.tf  outputs.tf  payload.json  provider.tf  terraform.tfvars.example  variables.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/dynamodb/: main.tf  outputs.tf
infra/modules/kinesis/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  user_data.sh.tpl  variables.tf
infra/modules/s3/: main.tf  outputs.tf
infra/modules/sagemaker/: main.tf  outputs.tf  variables.tf
ml/: Dockerfile.train  Makefile  pyproject.toml  vast_setup.sh
ml/configs/: mlflow_config.yaml  model_config.yaml  train_config.yaml
ml/data/: dataset.py  download.py  preprocess.py
ml/export/: convert_gguf.sh  merge_and_export.py
ml/infra/: Makefile  main.tf  outputs.tf  provider.tf  variables.tf
ml/modeling/: model.py  prompts.py
ml/tests/: test_dataset.py  test_eval.py
ml/training/: callbacks.py  eval.py  train.py
monitoring/: docker-compose.yml  evidently_report.py  prometheus.yml  pyproject.toml
monitoring/dashboards/: ml_quality.json  operational.json
monitoring/grafana/: dashboards.yml
monitoring/grafana/datasources/: prometheus.yml
sagemaker/: Dockerfile  pyproject.toml  serve.py
