[project]
name = "text2sql-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8.0",
    "boto3>=1.35.0",
    "tenacity>=8.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "boto3-stubs[dynamodb,s3]>=1.35.0",
    "datasets>=2.20.0",
    "requests>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["integration: requires LocalStack (docker compose up localstack localstack-init -d)"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN401"]
