[project]
name = "text2sql-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "peft>=0.12.0",
    "bitsandbytes>=0.43.0",
    "trl>=0.10.0,<1.0.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "mlflow>=2.14.0",
    "boto3>=1.35.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "tenacity>=8.5.0",
    "polars>=1.5.0",
    "scipy>=1.14.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
