[project]
name = "text2sql-monitoring"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.4.0",
    "boto3>=1.35.0",
    "mlflow>=2.14.0",
    "polars>=1.5.0",
    "pandas>=2.0.0",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.11.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = []
